--- a/codewars/katas/java/pom.xml
+++ b/codewars/katas/java/pom.xml
@@ -26,7 +26,9 @@
 		<module>string-to-camelcase</module>
 		<module>encrypt-this</module>
         <module>equal-sides-of-an-array</module>
-    </modules>
+        <module>deadfish-swim</module>
+		<module>digital-root</module>
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
